--- a/test.tex
+++ b/test.tex
@@ -1,6 +1,9 @@
 \documentclass{article}
 \begin{document}
 
+Note: bibweb will not resolve every citation here: it will only
+resolve the ones listed as having ``one match''.
+
 \cite{adams;hopf-invariant-one}		% should produce two matches
 
 % \cite{palmieri.j*}			% too many matches
